deploy/k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neatpush-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: neatpush-worker
  template:
    metadata:
      labels:
        app: neatpush-worker
    spec:
      containers:
        - name: neatpush
          image: guigze/neatpush:latest
          imagePullPolicy: Always
          command: ["neatpush", "worker", "--no-watch"]
          livenessProbe:
            exec:
              command: ["neatpush", "ping"]
          readinessProbe:
            exec:
              command: ["neatpush", "ping"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neatpush-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: neatpush-redis
  template:
    metadata:
      labels:
        app: neatpush-redis
    spec:
      containers:
        - name: neatpush
          image: redis:7.0.4-bullseye
          ports:
            - name: tcp
              containerPort: 6379
              protocol: TCP
          livenessProbe:
            exec:
              command: ["redis-cli", "ping"]
          readinessProbe:
            exec:
              command: ["redis-cli", "ping"]
---
apiVersion: v1
kind: Service
metadata:
  name: neatpush-redis # *.neatpush-redis.default.svc.cluster.local
  labels:
    app: neatpush-redis
spec:
  ports:
    - port: 6379
      name: neatpush-redis
  selector:
    app: neatpush-redis

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neatpush-edgedb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: neatpush-edgedb
  template:
    metadata:
      labels:
        app: neatpush-edgedb
    spec:
      volumes:
        - name: neatpush-pv-psql
          persistentVolumeClaim:
            claimName: neatpush-pv-psql
      containers:
        - name: neatpush
          image: edgedb/edgedb:2.1
          ports:
            - name: tcp
              containerPort: 5656
              protocol: TCP
            - name: http
              containerPort: 10703
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/edgedb
              name: neatpush-pv-psql
---
apiVersion: v1
kind: Service
metadata:
  name: neatpush-edgedb # *.neatpush-edgedb.default.svc.cluster.local
  labels:
    app: neatpush-edgedb
spec:
  ports:
    - port: 5656
      name: neatpush-edgedb
  selector:
    app: neatpush-edgedb

---
apiVersion: v1
kind: Service
metadata:
  name: neatpush-edgedb-ui # *.neatpush-edgedb-ui.default.svc.cluster.local
  labels:
    app: neatpush-edgedb-ui
spec:
  ports:
    - port: 10703
      name: neatpush-edgedb-ui
  selector:
    app: neatpush-edgedb-ui

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neatpush-edgedb-ui
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  rules:
    - host: neatpush-edgedb.renewex.fun
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: neatpush-edgedb-ui
                port:
                  number: 10703
